# scout_base

scout_base/: CMakeLists.txt  package.xml
scout_base/include/scout_base/: scout_messenger.hpp
scout_base/launch/: scout_mini_base.launch.py
scout_base/src/: scout_base_node.cpp  scout_messenger.cpp
scout_msgs/: CMakeLists.txt  package.xml
scout_msgs/msg/: ScoutStatus.msg
